<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/icon_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon_volume"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/volume"
            android:src="@drawable/loud" />

        <ImageView
            android:id="@+id/icon_battery_saver"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/battery_saver"
            android:src="@drawable/battery_high" />

        <ImageView
            android:id="@+id/icon_background"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/background"
            android:src="@drawable/background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon_intensity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/intensity"
            android:src="@drawable/app_intensity_medium" />

        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/widget"
            android:src="@drawable/app" />

        <ImageView
            android:id="@+id/icon_toggle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/toggle_direction"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

</LinearLayout>